# src/utils/swaggerDocs.yaml
@@ -8,6 +8,10 @@ info:
 tags:
   - name: BroadcastController
     description: 방송 프로그램 관련 api
+  - name: RoomController
+    description: 채팅방 관련 api
+  - name: ChatController
+    description: 채팅 관련 api
 paths:
   /v1/broadcast:
     get:
@@ -18,6 +22,125 @@ paths:
       responses:
         '200':
           description: 크롤링 성공
+  /v1/room:
+    get:
+      tags:
+        - RoomController
+      summary: 채팅방 리스트 가져오기
+      description: 현재 on-air인 채팅방들 모두 가져오기
+      responses:
+        '200':
+          description: 성공
+    post:
+      tags:
+        - RoomController
+      summary: 채팅방 만들기
+      description: 방송 시간표 기준으로 채팅방을 열어주기
+      requestBody:
+        description: MakeRoomDto
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MakeRoomDto"
+      responses:
+        '200':
+          description: 성공
+  /v1/chat:
+    post:
+      tags:
+        - ChatController
+      summary: 채팅 보내기
+      description: 채팅을 보내고 socket을 통해 다른사람들에게 전달
+      requestBody:
+        description: SendChatDto
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/SendChatDto"
+      responses:
+        '200':
+          description: 성공
+  /v1/chat/{programId}:
+    post:
+      tags:
+        - ChatController
+      summary: 채팅 가져오기
+      description: 해당 프로그램의 채팅 리스트를 모두 가져옴
+      parameters:
+        - name: programId
+          in: path
+          description: 해당 프로그램 Id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: 성공
+components:
+  schemas:
+    MakeRoomDto:
+      type: object
+      required:
+        - programId
+        - channelName
+        - programName
+        - episodeName
+        - endTime
+      properties:
+        programId:
+          type: number
+          description: 프로그램 Id
+          example: 1
+        channelName:
+          type: string
+          description: 채널 이름
+          example: SBS
+        programName:
+          type: string
+          description: 프로그램 이름
+          example: 사랑의 이해
+        episodeName:
+          type: string
+          description: 회차 이름
+          example: 10회
+        endTime:
+          type: string
+          description: 채팅방 종료 시간
+          example: 2023-05-23T10:30:00.000Z
+    SendChatDto:
+      type: object
+      required:
+        - userId
+        - nickname
+        - programId
+        - image
+      properties:
+        userId:
+          type: number
+          description: 보내는 유저의 Id
+          example: 1
+        nickname:
+          type: string
+          description: 보내는 유저의 닉네임
+          example: minwoo
+        programId:
+          type: number
+          description: 보내는 프로그램 Id
+          example: 1
+        text:
+          type: string
+          description: 보내는 내용
+          example: hello
+        image:
+          type: boolean
+          description: 이미지 포함 여부
+          example: true
+        imageUri:
+          type: string
+          description: 이미지 주소
+          example: image.src
+
 
 
 
